# academic-claim-analyzer

./: .pdm-python  LICENSE  PROJECT_MAINTENANCE.md  README.md  academic-claim-analyzer_context_20240801_141713.txt  academic-claim-analyzer_context_20240801_185535.txt  academic-claim-analyzer_context_20240801_195355.txt  academic-claim-analyzer_context_20240801_210344.txt  academic-claim-analyzer_context_20240802_073332.txt  academic-claim-analyzer_context_20240802_075119.txt  academic-claim-analyzer_context_20240802_080842.txt  academic-claim-analyzer_context_20240803_100152.txt  academic-claim-analyzer_context_20240803_175013.txt  academic-claim-analyzer_context_20240804_140415.txt  academic-claim-analyzer_context_20240804_143019.txt  academic-claim-analyzer_context_20240820_175120.txt  batch_processor_guide.md  conftest.py  firecrawl_setup.md  pyproject.toml  query_formulation_guide.md  repo_context_extractor.py  repository_context.txt  requirements.txt  setup.py
CLAIMS/: run1.yaml  test.yaml
academic_claim_analyzer/: __init__.py  _version.py  analyzer.py  batch_processor.py  debug_utils.py  exclusion_processor.py  llm_api_handler.py  llm_handler_config.py  main.py  models.py  paper_ranker.py  paper_scraper.py  query_formulator.py  query_processor.py  schema_manager.py  search_coordinator.py  test_scraper.py  utils.py
batch_output/: analysis_results_20241027_100845.json  batch_batch_671d655582bc81909720f37f521fb232_metadata.json  batch_batch_671d655582bc81909720f37f521fb232_output.jsonl  batch_batch_671d6593bbd881908cd69963808acd57_metadata.json  (+38 more)
(+120 files in other folders)
